fixed wrong background for birthdays

--- a/style.scss
+++ b/style.scss
@@ -266,3 +266,6 @@ button .close {
 .unread, .unread:hover {
     background-color: #333 !important;
 }
+.panel-body > .w100 {
+    background-color: #333 !important;
+}
